--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ section,
 /* Footer Section */
 #footer-section {
     background-color: #FAF9F6;
-    padding: 40px 100px 0px;
+    padding: 30px 100px 0px;
     font-size: 0.925rem;
     line-height: 1.7;
 }
@@ -95,7 +95,7 @@ section,
 }
 
 .footer-logo {
-    height: 8rem;
+    height: 9rem;
     filter: contrast(3);
 }
 
@@ -488,6 +488,7 @@ section,
     background-color: #EDEDED;
     height: 245px;
     overflow: hidden;
+
 }
 
 .mission-text {
@@ -583,82 +584,131 @@ section,
 
 /* Team Section */
 #team-section {
-    background-color: #FDFAF7;
+    padding: 0px;
+}
+
+#team-heading {
+    background-color: #FEFFFA;
+    padding: 20px;
+    text-align: center;
+}
+
+.team-wrapper {
+    overflow: hidden;
+    display: flex;
 }
 
 .team-card {
-    background-color: #F0EFED;
+    padding: 0;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: none;
+    transition: all 0.5s ease-in-out; /* Smooth transition for the width and color */
+    cursor: pointer;
+    flex: 1; /* Default equal width */
+}
+
+.card-one { 
+    background-color: #A08963; 
+}
+.card-two { 
+    background-color: #7B542F; 
+  }
+.card-three { 
+    background-color: #74512D; 
+}
+.card-four { 
+    background-color: #543310;
+}
+
+/* The Expanding Column Logic */
+.team-card:hover {
+    flex: 1.5; /* This makes the hovered column 1.5x wider than others */
+}
+
+.member-name,
+.member-role,
+.member-bio {
     text-align: center;
-    padding: 20px 10px;
-    border: none !important;
-    /* border-radius: 15px !important; */
-    transition: all 0.3s ease-in-out;
+    position: relative;
+    top: 0rem;
 }
 
-
-.team-grid {
-    text-align: center;
+.member-name {
+    font-family: "Pacifico", cursive;
+    color: #EDEDED;
+    font-size: 2.5rem;
+    font-weight: 400;
+    letter-spacing: 0.1rem; 
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-.team-image {
-    background-color: #806C57;
-    height: 250px;
-    width: 250px;
-    border-radius: 20px;
-    object-fit: cover;
-    border: none;
-    transition: transform 0.5s ease; 
-}
-
-.team-image:hover {
-    transform: translateY(5px);
-    box-shadow: 0 15px 35px rgba(141, 110, 99, 0.15) !important;
-}
-
-.team-member {
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #121212;
-    text-transform: uppercase;
-    margin-bottom: 5px;
-}
-
-.team-role {
-    font-family: 'Montserrat', sans-serif;
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    letter-spacing: 1.5px;
-    color: #A86620; 
-    font-weight: 700;
-}
-
-.team-bio {
-    font-size: 0.925rem;
-    color: #6C757D;
-    text-wrap: balance;
-    min-height: 75px; /* Keeps the 'Order Tag' aligned horizontally across cards */
-}
-
-.order-tag {
-    background-color: #F8F1ED;
-    padding: 12px;
-    border-radius: 10px;
-    margin-top: 10px;
-}
-
-.order-tag small {
-    display: block;
-    text-transform: uppercase;
-    font-weight: 800;
-    font-size: 0.7rem;
-    color: #A38B7A;
-    margin-bottom: 3px;
-}
-
-.order-tag span {
+.member-role {
+    font-family: "Montserrat", sans-serif;
+    color: #EDEDED;
+    font-size: 1rem;
     font-weight: 600;
-    color: #4E342E;
-    font-size: 0.9rem;
+    letter-spacing: 0.5px; 
+    text-transform: uppercase;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.member-bio {
+    color: #EDEDED;
+    font-size: 1rem;
+    font-weight: 400; 
+    width: 100%;
+    margin: auto;
+    padding: 10px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+/* The Image Zoom Logic */
+.member-image {
+    width: 100%;
+    margin-top: auto;
+    transform-origin: bottom center;
+    transition: transform 0.5s ease-in-out;
+    filter: saturate(0.9);
+}
+
+.team-card:hover .member-image {
+    transform: scale(1); /* Zooms image up while column expands */
+}
+
+.team-card:hover .member-name,
+.team-card:hover .member-role {
+    top: 0rem;
+    z-index: 1;
+}
+
+.team-card:hover .member-name {
+    font-size: 3.5rem;
+}
+
+.team-card:hover .member-role {
+    font-size: 1.25rem;
+}
+
+.team-card:hover .member-bio {
+    display: none;
+}
+
+.team-card::before {
+    content: '';
+    position: absolute;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background: url("../images/team/team-bg.jpg") no-repeat center / cover;
+    opacity: 0;
+    transition: opacity 0.5s;
+    z-index: 0;
+}
+
+.team-card:hover::before {
+    opacity: 0.1;
 }
 
 /* Modal */
@@ -866,7 +916,7 @@ section,
         font-size: 0.8rem;
         margin: auto;
         text-align: center;
-        width: 95%;
+        width: 79%;
     }
 
     .footer-contact {
@@ -1164,28 +1214,61 @@ section,
     }
 
     /* Team Section */
-    .team-card {
-        width: 90%;
+    #team-heading {
+        padding: 20px 10px;
         margin: auto;
     }
-
-    .team-image {
-        height: 150px;
-        width: 150px;
+    .team-container {
+        display: flex;
+        flex-wrap: wrap; /* Allows cards to wrap to the next line on mobile */
+        width: 100%;
+    }
+    .team-card {
+        flex: 0 0 50%!important; /* Force cards to take up exactly 50% width */
+        height: 50vh;   /* Adjust height so 2 rows fit on one screen */
+        position: relative;
+        overflow: hidden;
+    }
+    
+    .member-image {
+        transform: scale(1.3);
     }
 
-    .team-member {
-        font-size: 1.1rem;
+    .member-name {
+        font-size: 3rem;
     }
 
-    .team-role,
-    .team-bio,
-    .order-tag span {
-        font-size: 0.875rem;
+    .member-bio {
+        display: none;
     }
 
-    .order-tag small {
-        font-size: 0.725rem;
+    .team-card:hover .member-name {
+        font-size: 2.5rem;
+    }
+
+    .team-card:hover .member-role {
+        font-size: .875rem;
+    }
+
+    .team-card:hover .member-bio {
+        display: block;
+        font-size: 0.7rem;
+        text-wrap: balance;
+        padding: 0;
+    }
+
+    .team-card::before {
+        opacity: 0.1;
+    }
+
+    .team-card:hover::before {
+        content: '';
+        position: absolute;
+        top: 0; left: 0; width: 100%; height: 100%;
+        background: url("../images/team/team-bg.jpg") no-repeat center / cover;
+        opacity: 0;
+        transition: opacity 0.5s;
+        z-index: 0;
     }
 
     /* menu.html */
@@ -1247,7 +1330,7 @@ section,
     }
 
     section {
-        padding: 20px;
+        padding: 20px 10px;
     }
     strong {
         font-weight: 600;
@@ -1259,7 +1342,7 @@ section,
     }
 
     #heading {
-        padding: 30px;
+        padding: 30px 20px;
         max-width: 100%;
         height: 450px;
     }
@@ -1274,8 +1357,7 @@ section,
     }
 
     .navbar-brand {
-        padding-top: 5px;
-        padding-left: 15px;
+        padding-left: 10px;
     }
 
     .navbar-nav a {
@@ -1309,14 +1391,13 @@ section,
     /* Footer Section */
     #footer-section {
         background-color: #FAF9F6;
-        padding: 20px 20px 0px;
+        padding: 20px 10px 0px;
         font-size: 0.925rem;
         line-height: 1.7;
     }
 
     .footer-title {
         font-size: 1.15rem;
-        margin-top: 10px;
     }
 
     .footer-logo {
@@ -1329,14 +1410,12 @@ section,
     } 
 
     .footer-text {
-        font-size: 0.650rem;
+        font-size: 0.625rem;
         width: 100%;
-        margin: auto;
-        margin-top: 10px;
     }
 
     .footer-contact {
-        font-size: .725rem;
+        font-size: 0.675rem;
     }
 
     .link-text {
@@ -1350,7 +1429,7 @@ section,
     }
 
     .footer-copyright {
-        font-size: 0.80rem;
+        font-size: 0.675rem;
     }
 
     .footer-nav a {
@@ -1508,18 +1587,18 @@ section,
     /* Mission/Vision Section */
     #mission-section,
     #vision-section {
-        height: 185px;
+        height: 200px;
     }
 
     .mission-image {
         height: 305px;
-        top: -75px;
+        top: -70px;
         right: -85px;
     }
 
     .vision-image {
         height: 305px;
-        top: -75px;
+        top: -65px;
         right: -75px;
     }
 
@@ -1578,36 +1657,56 @@ section,
 
     /* Team Section */
     #team-section {
-        text-align: center;
-        padding: 20px 0px;
+        padding: 0px;
     }
-
     .team-card {
+        height: 100vh;
+        width: auto;
+        flex: 1; 
+    }
+    .team-card:hover {
+        flex: 2; 
+    }
+    .team-card:hover .member-image {
+        transform: scale(1);
+    }
+
+    .member-name {
+        font-size: 2rem;
+    }
+
+    .member-role {
+        font-size: .7rem;
+    }
+
+    .member-bio {
+        font-size: .8rem;
+    }
+
+    .member-image {
         width: 100%;
-        margin: auto;
+        margin-top: auto;
+        transform-origin: bottom center;
+        transition: transform 0.5s ease-in-out;
+        filter: saturate(0.9);
     }
 
-    .team-image {
-        height: 150px;
-        width: 150px;
+        .team-card:hover .member-name,
+        .team-card:hover .member-role {
+            top: 0rem;
+            z-index: 1;
+        }
+
+    .team-card:hover .member-name {
+        font-size: 3.5rem;
     }
 
-    .team-member {
-        font-size: 1.1rem;
+    .team-card:hover .member-role {
+        font-size: 1.25rem;
     }
 
-    .team-bio {
-        min-height: 90px;
-    }
-
-    .team-role,
-    .team-bio,
-    .order-tag span {
-        font-size: 0.750rem;
-    }
-
-    .order-tag small {
-        font-size: 0.650rem;
+    .team-card:hover .member-bio {
+        display: none;
     }
 
     /* menu.html */
