fixed gallery padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -548,6 +548,7 @@ section,
 #insta-section {
     background-color: #12100E;
     color: #F0EFED;
+    padding: 30px 100px 20px;
 }
 
 .insta-title {
