--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -639,9 +639,9 @@ section,
 }
 
 .member-name {
-    font-family: "Caveat Brush", cursive;
+    font-family: "Marck Script", cursive;
     color: #F8F4E1;
-    font-size: 3rem;
+    font-size: 3.5rem;
     font-weight: 900;
     letter-spacing: 2px; 
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
@@ -688,7 +688,7 @@ section,
 }
 
 .team-card:hover .member-name {
-    font-size: 4.5rem;
+    font-size: 5rem;
 }
 
 .team-card:hover .member-role {
@@ -822,7 +822,7 @@ section,
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) { 
     strong {
-        font-weight: 500;
+        font-weight: 600;
     }
 
     p {
@@ -835,7 +835,7 @@ section,
 
     .section-heading,
     .heading-brown {
-        font-size: 1.25rem; 
+        font-size: 1.35rem; 
         text-align: center;
     }
 
@@ -892,7 +892,7 @@ section,
     }
 
     .footer-title {
-        font-size: 1.25rem;
+        font-size: 1.15rem;
         margin-top: 20px;
         text-align: center;
     }
@@ -907,7 +907,7 @@ section,
     }
 
     .title-brown {
-        font-size: 1.25rem;
+        font-size: 1.15rem;
     } 
 
     .footer-text {
@@ -1015,7 +1015,9 @@ section,
     }
         
     .services-card-heading {
-        font-size: 1.25rem;
+        font-size: 1rem;
+        width: 80%;
+        margin: auto;
     }
 
     .services-text {
@@ -1227,6 +1229,10 @@ section,
         position: relative;
         overflow: hidden;
     }
+
+    .team-card:hover .member-image {
+        transform: scale(1);
+    }
     
     .member-image {
         transform: scale(1.3);
@@ -1238,7 +1244,7 @@ section,
     }
 
     .member-name {
-        font-size: 3.75rem;
+        font-size: 3.5rem;
         text-shadow: none;
         letter-spacing: 0px;
     }
@@ -1254,7 +1260,7 @@ section,
     }
 
     .team-card:hover .member-name {
-        font-size: 3rem;
+        font-size: 2.5rem;
         letter-spacing: 0px;
     }
 
@@ -1266,7 +1272,7 @@ section,
         display: block;
         font-size: 0.8rem;
         text-wrap: balance;
-        padding: 5px;
+        padding: 0px;
     }
 
     .team-card::before {
