--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1224,7 +1224,7 @@ section,
         width: 100%;
     }
     .team-card {
-        flex: 0 0 50%!important; /* Force cards to take up exactly 50% width */
+        flex: 1 0 50%!important; /* Force cards to take up exactly 50% width */
         height: 50vh;   /* Adjust height so 2 rows fit on one screen */
         position: relative;
         overflow: hidden;
@@ -1709,10 +1709,10 @@ section,
         filter: saturate(0.9);
     }
 
-        .team-card:hover .member-name,
-        .team-card:hover .member-role {
-            top: 0rem;
-            z-index: 1;
+    .team-card:hover .member-name,
+    .team-card:hover .member-role {
+        top: 0rem;
+        z-index: 1;
         }
 
     .team-card:hover .member-name {
@@ -1774,18 +1774,113 @@ section,
     }
 }
 
-/* Ipad Pro*/
-@media only screen and (min-width: 1024px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) { 
-    /* Team Section */
-    .team-card {
-        height: 100vh;
-    }
+/* Ipad Pro:Portrait */
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+    /* about.html */
+    /* Mission/Vision Section */
     #mission-section, #vision-section {
         height: 200px;
         padding: 30px 100px;
     }
-}
 
+    /* Team Section */
+    .team-wrapper {
+        flex-wrap: wrap; /* Allows cards to wrap to a second line */
+    }
+
+    .team-card {
+        flex: 1 0 50%; /* Force 2 columns (50% width each) */
+        height: 50vh;  /* Half screen height so all 4 fit on one screen */
+    }
+
+    .team-card:hover {
+        flex: 1 0 50%; 
+    }
+
+    .member-image {
+        transform: scale(1);
+    }
+
+    .team-card:hover .member-image {
+        transform: scale(1);
+    }
+
+    .member-role {
+        font-size: 1rem;
+        text-shadow: none;
+    }
+
+    .member-name {
+        font-size: 4rem;
+        text-shadow: none;
+        letter-spacing: 0px;
+    }
+
+    .team-card:hover .member-name,
+    .team-card:hover .member-role, 
+    .team-card:hover .member-bio {
+        top: -1rem;
+    }
+
+    .member-bio {
+        display: none;
+    }
+
+    .team-card:hover .member-name {
+        font-size: 3rem;
+        letter-spacing: 0px;
+    }
+
+    .team-card:hover .member-role {
+        font-size: 0.8rem;
+    }
+
+    .team-card:hover .member-bio {
+        display: block;
+        font-size: 1rem;
+        text-wrap: balance;
+        padding: 0px 5px;
+    }
+
+    .team-card::before {
+        opacity: 0.1;
+    }
+
+    .team-card:hover::before {
+        content: '';
+        position: absolute;
+        top: 0; left: 0; width: 100%; height: 100%;
+        background: url("../images/team/team-bg.jpg") no-repeat center / cover;
+        opacity: 0;
+        transition: opacity 0.5s;
+        z-index: 0;
+    }
+}
+/* Ipad Pro:Landscape */
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+    /* Navbar */
+    .navbar-nav a {
+        font-size: 0.850rem;
+        padding: 15px 10px;
+    }
+
+    .navbar-nav a:hover {
+        color: #A86620 !important;
+    }
+
+    .navbar-nav .active a {
+        border-bottom: 5px solid #A86620;
+        color: #A86620;
+        background-color: #FFF;
+        padding: 15px;
+    }
+    
+    /* Team Section */
+    .team-card {
+        height: 65vh;
+        flex: 1;  
+    }
+}
 /* Large devices (desktops, 992px and up)*/
 /* @media (min-width: 992px) and (max-width: 1199.98px) { ... } */
 
