--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1238,25 +1238,30 @@ section,
         transform: scale(1.3);
     }
 
-    .member-role {
-        font-size: 0.875rem;
-        text-shadow: none;
-    }
-
     .member-name {
         font-size: 3.5rem;
         text-shadow: none;
         letter-spacing: 0px;
     }
 
-    .team-card:hover .member-name,
-    .team-card:hover .member-role, 
-    .team-card:hover .member-bio {
-        top: -1rem;
+    .member-role {
+        font-size: 0.875rem;
+        text-shadow: none;
     }
 
     .member-bio {
         display: none;
+    }
+
+    .member-name,
+    .member-role {
+        top: -1rem;    
+    }
+
+    .team-card:hover .member-name,
+    .team-card:hover .member-role, 
+    .team-card:hover .member-bio {
+        top: -1rem;
     }
 
     .team-card:hover .member-name {
